--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@openzeppelin/contracts": "^4.5.0"
+        "@openzeppelin/contracts": "^4.7.3",
+        "@openzeppelin/contracts-upgradeable": "^4.7.3"
     },
     "devDependencies": {
         "@truffle/hdwallet-provider": "^2.0.8",
